--- a/index.html
+++ b/index.html
@@ -3,30 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Website</title>
+  <title>EAFC26</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <nav>
-      <h1>My Website</h1>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
+      
+      <div class="dropdown">
+        <button class="dropbtn">☰ Menu</button>
+        <div class="dropdown-content">
+         <a href="#">Home</a>
+         <a href="#">Comittees</a>
+         <a href="#">Subscribers</a>
+         <a href="#">About Us</a>
+       </div>
+      </div>
+      <h1>Economics is the Best</h1>
+
     </nav>
   </header>
 
   <main>
     <section>
-      <h2>Welcome!</h2>
+      <h2>Insert Logo here</h2>
       <p>This is your new website. Start adding content here.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 My Website</p>
+    <p>&copy; 2025 Lorenzo Corporation Limited</p>
   </footer>
 </body>
 </html>
