--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          <a href="#">About Us</a>
        </div>
       </div>
-      <h1>Economics is the Best</h1>
+      <h1>Maastricht Economics Society</h1>
 
     </nav>
   </header>
@@ -27,7 +27,10 @@
   <main>
     <section>
       <h2>Insert Logo here</h2>
-      <p>This is your new website. Start adding content here.</p>
+      <p>Vision and Mission Statement:</p>
+      <p>When it’s no longer obvious what is true and what isn’t/where the truth lies, our best tools to discern facts are scientific knowledge and critical thought. This is Maastricht Economic Society. Combining expert’s insight with student’s commitment we aim to contribute to a deeper and precise understanding of the contemporary economics developments/events. Our mission drives us to turn complexity into clarity and information into comprehension.
+      </p>
+      <p></p>
     </section>
   </main>
 
